# Double_Win

./: README.md
Bin64_with_Qt/DoubleWin/pages/: 1.html  10.html  11.html  12.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
Server/: Double_Win_Server.cpp  FServer.h
sourse/: CMakeLists.txt  CMakeLists.txt.user.5290839  Client-Double-Exam_ru_RU.ts  DEX_Cleint.h  DEX_Client.cpp  FClient.h  Incrypt.qss  SpyBot.qss  heart.cpp  heart.h  heart.ui  main.cpp  tasks.h
